# cerebrate

./: Cargo.toml  build.rs  flake.nix
crates/swarm/: Cargo.toml
crates/swarm/src/: agent_manager.rs  api.rs  auth.rs  btrfs.rs  checkpoint.rs  config.rs  error.rs  main.rs  models.rs  protocol.rs  proxy.rs  skill_manager.rs  state.rs
crates/swarm/src/api/: agents.rs  mod.rs  skills.rs  tools.rs  types.rs  websocket.rs
crates/swarm/src/db/: db.rs
crates/swarm/src/forgejo/: collaborator.rs  mod.rs  org.rs  repo.rs  user.rs
crates/swarm/src/templates/: configuration.nix
crates/swarm/src/tool_manager/: env.rs  git.rs  invoke.rs  mod.rs  skill.rs
modules/: swarm.nix
proto/: swarm.proto
src/: agent_manager.rs  app_state_impl.rs  auth.rs  auth_middleware.rs  btrfs.rs  checkpoint.rs  cli.rs  config.rs  error.rs  jwt.rs  lib.rs  llm_proxy.rs  main.rs  models.rs  proxy.rs  pylon_client.rs  state.rs  state_init.rs  sync.rs
src/api/: agent.rs  agents.rs  auth.rs  checkpoint.rs  checkpoints.rs  llm.rs  mod.rs  providers.rs  rpc.rs  skill.rs  skills.rs  stats.rs  tool.rs  tools.rs  types.rs  websocket.rs
src/commands/: agent.rs  apply.rs  checkpoint.rs  config.rs  generate_flake.rs  git.rs  key.rs  mod.rs  model.rs  provider.rs  serve.rs  skill.rs  status.rs  tool.rs
src/forgejo/: collaborator.rs  mod.rs  org.rs  repo.rs  user.rs
src/grpc/: client.rs  handler.rs  interceptor.rs  mod.rs
src/incus/: client.rs  mod.rs  types.rs
src/models/: agent.rs  defaults.rs
src/protocol/: agent_messages.rs  host_messages.rs  mod.rs  tests.rs  types.rs  vm_messages.rs
src/rpc/: handler.rs  mod.rs  protocol.rs  registry.rs  server.rs
src/rpc/methods/: agent.rs  checkpoint.rs  forward.rs  llm.rs  mod.rs  skill.rs  stats.rs  tool.rs
src/tool_manager/: env.rs  git.rs  invoke.rs  mod.rs  skill.rs
templates/: flake.nix  hardware-configuration.nix
tests/: api_tests.rs  auth_middleware_test.rs  grpc_integration_test.rs  http_integration_test.rs  jwt_test.rs  models_test.rs  protocol_compat.rs  protocol_types_test.rs  state_test.rs
