[package]
name = "swarm"
version = "0.9.0"
edition = "2021"
authors = ["Zerg Swarm Team"]
license = "MIT"

[lib]
name = "swarm"
path = "src/lib.rs"

[[bin]]
name = "zerg-swarm"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
dirs = "6"
async-trait = "0.1"

axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"
async-stream = "0.3"

clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
