[package]
name = "cerebrate"
version = "0.1.0"
edition = "2021"
authors = ["OpenZerg Team"]
license = "MIT"

[lib]
name = "cerebrate"
path = "src/lib.rs"

[[bin]]
name = "cerebrate"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
dirs = "6"
async-trait = "0.1"

axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures-util = "0.3"
hyper = "1.0"
hyper-util = "0.1"
http-body-util = "0.1"

tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"

clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
sha2 = "0.10"
base64 = "0.22"
jsonwebtoken = "9.3"
once_cell = "1.19"
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
serial_test = "3"
wiremock = "0.6"
tower = "0.5"
http-body-util = "0.1"
